--- a/booking.html
+++ b/booking.html
@@ -127,7 +127,7 @@
             <div class="appointDetails">
             <div class="Drdetails">
                 <div class="drImage">
-                    <img class="img" src="./Doctor Appointment Module (2)/Images/image-removebg-preview (8) 1.png" alt="">
+                    <img class="img" src="./image-removebg-preview (8) 1.png" alt="">
                     <span><i class='bx bxs-star' ></i> 4.5</span>
                     <p>202 rating</p>
                 </div>
@@ -190,7 +190,7 @@
             <div class="Appsec">
               <div class="doctorImage">
                 <div class="image">
-                    <img src="./Doctor Appointment Module (2)/Images/image-removebg-preview (7) 1.png">
+                    <img src="./image-removebg-preview (7) 1.png">
                 </div>
                 <h1>Dr. Stone Wilson</h1>
               </div>
@@ -295,7 +295,7 @@
             </div>
             <div class="DoctorCards">
                 <div class="DrCard">
-                    <img class="img" src="./Doctor Appointment Module (2)/Images/image-removebg-preview (8) 1.png" alt="">
+                    <img class="img" src="./image-removebg-preview (8) 1.png" alt="">
                     <div class="about">
                         <div class="name">
                             <h1>Dr. Wanitha</h1>
@@ -310,7 +310,7 @@
                 </div>
 
                 <div class="DrCard">
-                    <img src="./Doctor Appointment Module (2)/Images/image-removebg-preview (7) 2.png" alt="">
+                    <img src="./image-removebg-preview (7) 2.png" alt="">
                     <div class="about">
                         <div class="name">
                             <h1>Dr. Stone Wilson</h1>
@@ -358,7 +358,7 @@
                 </div>
                 <div class="Drs">
                     <div class="card">
-                        <img class="img" src="./Doctor Appointment Module (2)/Images/image-removebg-preview (13) 1.png" alt="">
+                        <img class="img" src="./image-removebg-preview (13) 1.png" alt="">
                         <div class="about">
                             <div class="name">
                                 <h1>Dr. Grey Liosion</h1>
@@ -372,7 +372,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="img" src="./Doctor Appointment Module (2)/Images/image-removebg-preview (12) 1.png" alt="">
+                        <img class="img" src="./image-removebg-preview (12) 1.png" alt="">
                         <div class="about">
                             <div class="name">
                                 <h1>Dr. Anthony</h1>
@@ -408,10 +408,10 @@
             </div>
             <div class="ContactDetails">
                <div class="number">
-                <img src="./Doctor Appointment Module (2)/Elements/Symbol.png" alt="">  <span>+91-1234567890</span>
+                <img src="./Symbol.png" alt="">  <span>+91-1234567890</span>
                </div>
                <div class="gmail">
-                <img src="./Doctor Appointment Module (2)/Elements/Symbol-1.png" alt=""> <span>contact@gmail.com</span> 
+                <img src="./Symbol-1.png" alt=""> <span>contact@gmail.com</span> 
                </div>
                <div class="SocialIcons">
                 <i class='bx bxl-facebook-circle'></i>
